--- a/index.html
+++ b/index.html
@@ -7,16 +7,6 @@
 </head>
 
 <body>
-    <h4>MARKET</h4>
-    <ol>
-        <li>Item</li>
-        <ul>
-            <li>apple</li>
-            <li>banana</li>
-            <li>carrots</li>
-        </ul>
-        <li>Item</li>
-        <li>Item</li>
-    </ol>
+    <h4>AGUY STALKER KA PALA</h4>
 </body>
 </html>
